force-app/main/default/objects/Test_Run__c/fields/Async_Apex_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Async_Apex_Job_Id__c</fullName>
    <label>Async Apex Job Id</label>
    <type>Text</type>
    <length>18</length>
    <description
  >ParentJobId shared by the ApexTestQueueItem rows for this run; equals ApexTestRunResult.AsyncApexJobId.</description>
</CustomField>