force-app/main/default/objects/Test_Run__c/fields/Coverage_Percent__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Percent__c</fullName>
    <label>Coverage Percent</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
    <description
  >Org-wide Apex code coverage percentage at completion, when available. Real code coverage aggregates (ApexCodeCoverageAggregate/ApexOrgWideCoverage) are Tooling-API-only and require a Named Credential the admin configures manually (see README); left blank when not configured or unavailable rather than showing a fabricated value.</description>
</CustomField>