force-app/main/default/objects/Test_Run__c/fields/Failed_Tests__c.field-meta.xml
<CustomField>
    <fullName>Failed_Tests__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Failed Tests</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>