force-app/main/default/objects/Test_Run__c/fields/Failure_Details__c.field-meta.xml
<CustomField>
    <fullName>Failure_Details__c</fullName>
    <label>Failure Details</label>
    <type>LongTextArea</type>
    <length>131072</length>
    <description
  >Economical failure-only storage: class/method/message/stack trace for failed tests, not a row per passing method.</description>
</CustomField>