force-app/main/default/objects/Test_Run__c/fields/Is_All_Tests__c.field-meta.xml
<CustomField>
    <fullName>Is_All_Tests__c</fullName>
    <label>Is All Tests</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>