force-app/main/default/objects/Test_Run__c/fields/Notification_Recipients__c.field-meta.xml
<CustomField>
    <fullName>Notification_Recipients__c</fullName>
    <label>Notification Recipients</label>
    <type>LongTextArea</type>
    <length>1000</length>
    <description
  >Snapshot of recipients at the time this run was started, in case the schedule's recipients change later.</description>
</CustomField>