force-app/main/default/objects/Test_Run__c/fields/Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Notification_Sent__c</fullName>
    <label>Notification Sent</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>