force-app/main/default/objects/Test_Run__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Text</type>
    <length>20</length>
    <description
  >One of Queued, Preparing, Processing, Completed, Failed, Aborted (mirrors ApexTestRunResult.Status); enforced in Apex, not as a picklist, to keep values in sync with the platform's own status values.</description>
</CustomField>