force-app/main/default/objects/Test_Run__c/fields/Total_Tests__c.field-meta.xml
<CustomField>
    <fullName>Total_Tests__c</fullName>
    <label>Total Tests</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>